Linux: - removed use of stupid dynamic linker for adb - Fixed: ADB didn't work without manually doing adb devices - Logs from both paths